--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,24 @@
   <groupId>myproject</groupId>
   <artifactId>project2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <build>
+  <properties>
+  <maven.compiler.source>1.8</maven.compiler.source>
+  <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  <plugins>
+          <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                  <suiteXmlFiles>
+                  <suiteXmlFile>testng.xml</suiteXmlFile>
+                </suiteXmlFiles>
+                </configuration>
+            </plugin>
+          </plugins>
+          </build>
   <dependencies>
   <dependency>
     <groupId>org.testng</groupId>
@@ -41,19 +59,4 @@
     <version>1.2.17</version>
 </dependency>
  </dependencies>
-  <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                <suiteXmlFiles>
-                  <suiteXmlFile>testng.xml</suiteXmlFile>
-                </suiteXmlFiles>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-</project>
+   </project>
