--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,27 @@
   <groupId>myproject</groupId>
   <artifactId>project2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <properties>
+   <properties>
   <maven.compiler.source>1.8</maven.compiler.source>
   <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   <build>
     <plugins>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <version>3.8.1</version>
+                 <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                 </configuration>
+            </plugin>
           <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.3.0</version>
                 <configuration>
-                  <suiteXmlFiles>
-                  <suiteXmlFile>testng.xml</suiteXmlFile>
-                </suiteXmlFiles>
+                  <suiteXmlFiles>testng.xml</suiteXmlFiles>
                 </configuration>
             </plugin>
           </plugins>
@@ -26,8 +33,7 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.14.3</version>
-    <scope>test</scope>
- </dependency>
+    </dependency>
  <dependency>
     <groupId>org.apache.poi</groupId>
     <artifactId>poi</artifactId>
